source/scss/partials/_media-queries.scss
@media (max-width: 1280px) {
  .main-block {
    .block {
    padding: 10px 0px;
    height: 500px;
  }

  #about, #design, #code {
    width: 33%;
  }

  #design {
    .content {
      padding: 10%;
      box-sizing: border-box;
    }

    ul{

      padding-top: 30px;
      margin-left: 20px;

      li {
        font-size: 18px;

        &.identity {
          background-size: 64px 57px;
          margin-right: 1px;
          height: 67px;
          line-height: 67px;
          padding-left: 80px;
          margin-bottom: 30px;
        }

        &.experience {
          background-size: 65px 67px;
          margin-right: 3px;
          height: 77px;
          line-height: 77px;
          padding-left: 80px;
          margin-bottom: 30px;
        }

        &.interface {
          background-size: 76px 92px;
          margin-right: 0px;
          height: 102px;
          line-height: 102px;
          padding-left: 80px;
        }
      }
    }
  }

  #code {
    .content {
      padding: 10%;
      box-sizing: border-box;
      span {
        font-size: 14px;
        line-height: 18px;
      }
    }
  }
  }
}

@media (max-width: 768px) {
  img {
    max-width: 100%;
  }
  .mobile-box {
    margin: 0 auto;
  }

  .main-block {
    .block {
    width: 100% !important;
    padding: 30px 0px;
    opacity: 1;
    height: 500px;
  }

  #design {
    ul{

      padding-top: 30px;
      margin-left: 20px;

      li {
        font-size: 18px;

        &.identity {
          background-size: 64px 57px;
          margin-right: 1px;
          height: 67px;
          line-height: 67px;
          padding-left: 80px;
          margin-bottom: 30px;
        }

        &.experience {
          background-size: 65px 67px;
          margin-right: 3px;
          height: 77px;
          line-height: 77px;
          padding-left: 80px;
          margin-bottom: 30px;
        }

        &.interface {
          background-size: 76px 92px;
          margin-right: 0px;
          height: 102px;
          line-height: 102px;
          padding-left: 80px;
        }
      }
    }
  }

  #code {
    .content {
      padding: 20px 0px 0px 15px;
      span {
        font-size: 14px;
        line-height: 18px;
      }
    }
  }
}

header {
  .browserbox {
    .content {
      height: 350px;
    }
  }
}

.product {
  padding: 0px 0px 60px;

  &.first {
    .section-title {
      margin-top: 0px;
    }
  }
}

  footer {
    dd {
      margin: 0px 0px 20px;
    }

    h2 {
      margin-bottom: 10px;
      font-size: 18px;
      line-height: 30px;
    }

    ul {
      text-align: center;

      li {
          float: none;
          display: inline-block;
      }
    }
  }
}

